--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
 <body>
     <header class="bg-gradient-to-r from-white to-stone-300">
         <section>
-            <div class="text-xl">
-                <nav class="flex justify-between p-6 mx-32">
+            <div class="md:text-xl">
+                <nav class="md:flex justify-between p-6 mx-32">
                     <img src="asset/logo-header.png" alt="">
                     <div>
-                        <ul class="flex gap-3 py-4 font-semibold">
+                        <ul class="font-semibold hidden md:flex gap-3 py-4">
                             <li>Product</li>
                             <li>Services</li>
                             <li>Contact us</li>
                         </ul>
                     </div>
-                    <div class="flex gap-3">
-                        <i class="py-6 fa-solid fa-magnifying-glass"></i>
-                        <i class="py-6 fa-solid fa-cart-shopping"></i>
-                        <button class="border-2 border-solid border-green-800 rounded-lg text-xl px-8 h-14">Login</button>
-                        <button class="bg-green-500 text-white px-8 h-14 rounded-lg text-xl">Register</button>
+                    <div class="hidden md:flex gap-3">
+                        <i class="md:py-6 fa-solid fa-magnifying-glass"></i>
+                        <i class="md:py-6 fa-solid fa-cart-shopping"></i>
+                        <button class="md: border-2 border-solid border-green-800 rounded-lg text-xl px-8 h-14">Login</button>
+                        <button class="md: bg-green-500 text-white px-8 h-14 rounded-lg text-xl">Register</button>
                   </div>
                 </nav>
             </div>
-            <div class="mx-32 text-center">
-                <h1 class="font-extrabold text-7xl p-10">Freshness <span class="text-green-500">You Can <br>
+            <div class="md:mx-32 text-center">
+                <h1 class="md:font-extrabold text-7xl p-10">Freshness <span class="text-green-500">You Can <br>
                     Count</span> On, Prices You’ll Love!</h1>
-                    <p class="text-xl">Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br>
+                    <p class="md:text-xl">Shop your daily essentials at unbeatable prices. From fresh produce to pantry <br>
                         staples, we’ve got you covered every day!</p>
-                    <div class="justify-items-center">
+                    <div class="md:justify-items-center">
                     <img src="asset/hero-vegetables.png" alt="">
                 </div>
             </div>
@@ -44,50 +44,50 @@
     </header>
 
     <main>
-<section class="mx-32">
-    <h1 class="text-4xl font-bold text-green-600 mt-20">Services</h1>
+<section class="md:mx-32">
+    <h1 class="font-bold text-green-600 md:text-4xl mt-20">Services</h1>
     <br>
-    <div class="justify-items-center">
-    <div class="flex">
-    <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-1/3 h-96 mr-6 my-10 p-6">
-        <div class="text-center justify-items-center">
-        <img class="w-36 h-32 bg-white rounded-full p-5 mr-5" src="asset/service.png" alt="">
-        <h3 class="font-bold text-2xl my-4">24/7 Services </h3>
-        <p class="text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+    <div class="md:justify-items-center">
+    <div class="flex-row md:flex">
+    <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-full md: w-1/3 h-96 mr-6 my-10 p-6">
+        <div class="md:md:text-center justify-items-center">
+        <img class="bg-white rounded-full md:w-36 h-32 p-5 mr-5" src="asset/service.png" alt="">
+        <h3 class="font-bold md:text-2xl my-4">24/7 Services</h3>
+        <p class="md:text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
     </div>
 </div>
-    <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-1/3 h-96 mr-6 my-10 p-6">
-        <div class="text-center justify-items-center">
-        <img class="w-36 h-32 bg-white rounded-full p-5 mr-5" src="asset/delivery.png" alt="">
-        <h3 class="font-bold text-2xl my-4">Fast Delivery</h3>
-        <p class="text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+    <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-full md: w-1/3 h-96 mr-6 my-10 p-6">
+        <div class="md:text-center justify-items-center">
+        <img class="bg-white rounded-full md:w-36 h-32 p-5 mr-5" src="asset/delivery.png" alt="">
+        <h3 class="font-bold md:text-2xl my-4">Fast Delivery</h3>
+        <p class="md:text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
     </div>
     </div>
-    <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-1/3 h-96 mr-6 my-10 p-6">
-    <div class="text-center justify-items-center">
-        <img class="w-36 h-32 bg-white rounded-full p-5 mr-5" src="asset/healthy.png" alt="">
-        <h3 class="font-bold text-2xl my-4">Healthy Products </h3>
-        <p class="text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+    <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-full md: w-1/3 h-96 mr-6 my-10 p-6">
+    <div class="md:text-center justify-items-center">
+        <img class="bg-white rounded-full md:w-36 h-32 p-5 mr-5" src="asset/healthy.png" alt="">
+        <h3 class="font-bold md:text-2xl my-4">Healthy Products</h3>
+        <p class="md:text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
     </div>
 </div>
 </div>
 </div>
 </section>
 
-<section class="bg-gradient-to-r from-white to-stone-200 py-28">
-    <div class="mx-32">
-    <h1 class="text-4xl font-bold text-green-600 mb-8">Popular Products</h1>
-    <div class="flex">
-    <div class="card bg-gradient-to-r from-green-600 to-white w-2/6 shadow-xl mr-14 pl-10 pt-10">
-        <h1 class="font-bold text-3xl mb-8">30% off</h1>
+<section class="bg-gradient-to-r from-white to-stone-200 md: py-28">
+    <div class="md:mx-32">
+    <h1 class="font-bold text-green-600 md:text-4xl mb-8">Popular Products</h1>
+    <div class="md:flex">
+    <div class="card bg-gradient-to-r from-green-600 to-white shadow-xl md: w-2/6 mr-14 pl-10 pt-10">
+        <h1 class="font-bold md: mb-8">30% off</h1>
         <p class="font-semibold">Discover a world of treats, toys, and <br> essentials handpicked for <br> </p>
-        <button class="font-semibold text-xl text-left bg-white w-36 rounded-lg mt-8 border-none p-2 text-center">Buy Now</button>
-        <img class="h-3/5" src="asset/vegetable-offer.png" alt="">
+        <button class="font-semibold bg-white rounded-lg border-none md:text-xl text-left mt-8 p-2 text-center w-36">Buy Now</button>
+        <img class="md:h-3/5" src="asset/vegetable-offer.png" alt="">
     </div>
-    <div class="grid grid-cols-3 gap-7 w-4/6">
-    <div class="card w-80 h-40 bg-white shadow-xl p-5 mr-5 rounded-lg flex-row">
+    <div class="grid grid-cols-2 gap-5 w-full md:grid-cols-3 gap-7 w-4/6">
+    <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row"">
         <div>
-        <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/image 43.png" alt="">
+        <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/image 43.png" alt="">
     </div>
         <div class="w-auto p-3">
         <i class="fa-solid fa-star text-orange-300"></i>
@@ -96,9 +96,9 @@
         <h5 class="font-semibold">$39.99</h5>
     </div>
     </div>
-    <div class="card w-80 h-40 bg-white shadow-xl p-5 mr-5 rounded-lg flex-row">
+    <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
         <div>
-        <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/Group 16.png" alt="">
+        <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16.png" alt="">
     </div>
         <div class="w-auto p-3">
         <i class="fa-solid fa-star text-orange-300"></i>
@@ -107,9 +107,9 @@
         <h5 class="font-semibold">$39.99</h5>
     </div>
     </div>
-    <div class="card w-80 h-40 bg-white shadow-xl p-5 rounded-lg flex-row">
+    <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
         <div>
-        <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/Group 16 (1).png" alt="">
+        <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16 (1).png" alt="">
     </div>
         <div class="w-auto p-3">
         <i class="fa-solid fa-star text-orange-300"></i>
@@ -118,9 +118,9 @@
         <h5 class="font-semibold">$39.99</h5>
     </div>
     </div>
-        <div class="card w-80 h-40 bg-white shadow-xl p-5 mr-5 rounded-lg flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
             <div>
-            <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/Group 16.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16.png" alt="">
         </div>
             <div class="w-auto p-3">
             <i class="fa-solid fa-star text-orange-300"></i>
@@ -129,9 +129,9 @@
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card w-80 h-40 bg-white shadow-xl p-5 mr-5 rounded-lg flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
             <div>
-            <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/image 43.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/image 43.png" alt="">
         </div>
             <div class="w-auto p-3">
             <i class="fa-solid fa-star text-orange-300"></i>
@@ -140,9 +140,9 @@
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card w-80 h-40 bg-white shadow-xl p-5 rounded-lg flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/Group 16.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16.png" alt="">
         </div>
             <div class="w-auto p-3">
             <i class="fa-solid fa-star text-orange-300"></i>
@@ -151,9 +151,9 @@
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card w-80 h-40 bg-white shadow-xl p-5 mr-5 rounded-lg flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
             <div>
-            <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/image 43.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/image 43.png" alt="">
         </div>
             <div class="w-auto p-3">
             <i class="fa-solid fa-star text-orange-300"></i>
@@ -162,9 +162,9 @@
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card w-80 h-40 bg-white shadow-xl p-5 mr-5 rounded-lg flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
             <div>
-            <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/Group 16 (1).png" alt="">
+            <img class="bg-gray-200 rounded-lg md:p-5 mr-5" src="asset/Group 16 (1).png" alt="">
         </div>
             <div class="w-auto p-3">
             <i class="fa-solid fa-star text-orange-300"></i>
@@ -173,9 +173,9 @@
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card w-80 h-40 bg-white shadow-xl p-5 rounded-lg flex-row">
+        <div class="card bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 p-5 mr-5 rounded-lg" src="asset/Group 16 (1).png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16 (1).png" alt="">
         </div>
             <div class="w-auto p-3">
             <i class="fa-solid fa-star text-orange-300"></i>
@@ -190,32 +190,32 @@
 </section>
 
 <section>
-    <div class="mx-32">
-    <h1 class="text-4xl font-bold text-green-600 my-8">Arrival & Offers</h1>
+    <div class="md:mx-32">
+    <h1 class="font-bold text-green-600 md:text-4xl my-8">Arrival & Offers</h1>
     <br>
-    <div class="flex gap-8">
-    <div class="bg-green-800 rounded-xl flex justify-between p-16 w-3/5">
+    <div class="md:flex gap-8">
+    <div class="bg-green-800 rounded-xl md: flex justify-between p-16 w-3/5">
         <div>
             <div>
                 <img src="asset/dawat-logo.png" alt="">
             </div>
             <div>
-            <h3 class="bg-green-400 text-xl font-bold text-white rounded-lg text-center my-16 p-3">Cook Exotic Dishes</h3>
-            <h2 class="font-bold text-5xl text-white">UP to 20% OFF</h2>
+            <h3 class="bg-green-400 font-bold text-white rounded-lg md:text-xl text-center my-16 p-3">Cook Exotic Dishes</h3>
+            <h2 class="font-bold text-white md:text-5xl">UP to 20% OFF</h2>
         </div>
     </div>
     <div>
         <img src="asset/dawat-mock-up.png" alt="">
     </div>
     </div>
-        <div class="bg-blue-800 rounded-xl flex justify-between p-12 w-2/5">
+        <div class="bg-blue-800 rounded-xl md: flex justify-between p-12 w-2/5">
             <div>
                 <div>
                     <img src="asset/india-gate-logo.png" alt="">
                 </div>
                 <div>
-                    <h3 class="bg-blue-400 text-xl font-bold text-white rounded-lg text-center my-12 p-3">World’s No.1 Rice</h3>
-                    <h2 class="font-bold text-4xl text-white">UP to 40% OFF</h2>
+                    <h3 class="bg-blue-400 font-bold text-white rounded-lg md:text-xl text-center my-12 p-3">World’s No.1 Rice</h3>
+                    <h2 class="font-bold text-white md: text-4xl ">UP to 40% OFF</h2>
                 </div>
             </div>
             <div>
@@ -224,54 +224,54 @@
         </div>
     </div>
 </div>
-<div class="bg-gradient-to-r from-orange-300 to-red-500 mt-16">
-    <div class="mx-32">
-    <h1 class="text-4xl font-bold text-green-800 my-8 py-8">Currently Delivering in</h1>
-    <div class="flex gap-10 justify-center p-10">
-    <h3 class="text-3xl font-semibold bg-green-400 text-white rounded-lg px-3">Dhaka</h3>
-    <h3 class="text-3xl font-semibold bg-green-400 text-white rounded-lg px-3">Chattogram</h3>
-    <h3 class="text-3xl font-semibold bg-green-400 text-white rounded-lg px-3">Rangpur</h3>
-    <h3 class="text-3xl font-semibold bg-green-400 text-white rounded-lg px-3">Barisal</h3>
+<div class="bg-gradient-to-r from-orange-300 to-red-500 md:mt-16">
+    <div class="md:mx-32">
+    <h1 class="font-bold text-green-800 md:text-4xl my-8 py-8">Currently Delivering in</h1>
+    <div class="md:flex gap-10 justify-center p-10">
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Dhaka</h3>
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Chattogram</h3>
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Rangpur</h3>
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Barisal</h3>
 </div>
-<div class="justify-items-center">
-    <img class="w-1/5 h-1/5" src="asset/Bangladesh_divisions_english.svg" alt="">
+<div class="md:justify-items-center">
+    <img class="md:w-1/5 h-1/5" src="asset/Bangladesh_divisions_english.svg" alt="">
 </div>
 </div>
 </div>
 
-<div class="relative top-48 rounded-lg place-items-center">
-    <div class="flex-row justify-between card bg-gradient-to-r from-white to-stone-200 shadow-xl w-3/5 p-12">
+<div class="relative rounded-lg md:top-48  place-items-center">
+    <div class="card bg-gradient-to-r from-white to-stone-200 shadow-xl md:flex-row justify-between w-3/5 p-12">
     <div>
         <img src="asset/vegetable-busket.png" alt="">
     </div>
     <div>
-        <h2 class="text-2xl font-bold m-5">Get Grocery News!</h2>
-        <h5 class="text-xl m-5">Exclusive training tips, ticks, product deals and more.</h5>
-        <input class="text-xl p-6 m-5 rounded-lg" type="email" name="" id="" placeholder="Enter email..."> <br>
-        <button class="text-xl font-semibold m-5 p-3 rounded-lg text-white bg-green-400">Subscribe</button>
+        <h2 class=" font-bold md:text-2xl m-5">Get Grocery News!</h2>
+        <h5 class="md:text-xl m-5">Exclusive training tips, ticks, product deals and more.</h5>
+        <input class="rounded-lg md:text-xl p-6 m-5" type="email" name="" id="" placeholder="Enter email..."> <br>
+        <button class="font-semibold rounded-lg text-white bg-green-400 md:text-xl m-5 p-3">Subscribe</button>
     </div>
 </div>
 </div>
 </section>
     </main>
 
-    <footer class="bg-green-600 py-48 text-xl text-white">
-        <div class="flex justify-between mx-32">
-            <div class="my-16">
+    <footer class="bg-green-600  text-white md:py-48 text-xl">
+        <div class="flex-row md:flex justify-between mx-32">
+            <div class="md:my-16">
                 <img src="asset/logo-footer.png" alt="">
                 <p>Discover a world of treats, toys, and <br>
                     essentials handpicked for your furry friends</p>
             </div>
-            <div class="my-16">
+            <div class="md:my-16">
                <ul>
-                <li class="mb-5"><a href="#">Product</a></li>
-                <li class="mb-5"><a href="#">Services</a></li>
-                <li class="mb-5"><a href="#">Contact us</a></li>
+                <li class="md:mb-5"><a href="#">Product</a></li>
+                <li class="md:mb-5"><a href="#">Services</a></li>
+                <li class="md:mb-5"><a href="#">Contact us</a></li>
                </ul>
             </div>
-            <div class="my-16">
-                <h6 class="mb-5">Follow Us</h6>
-                <div class="flex gap-3">
+            <div class="md:my-16">
+                <h6 class="md:mb-5">Follow Us</h6>
+                <div class="flex md:gap-3">
                     <img src="asset/Mask group.png" alt="">
                     <img src="asset/Vector.png" alt="">
                     <img src="asset/Vector (1).png" alt="">
