--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
         <section>
             <div class="md:text-xl">
                 <nav class="md:flex justify-between p-6 mx-32">
-                    <img src="asset/logo-header.png" alt="">
+                    <img class="max-sm:hidden" src="asset/logo-header.png" alt="">
+                    <img class="max-w-fit relative -left-20 sm:hidden" src="asset/Group 7.png" alt="">
                     <div>
-                        <ul class="font-semibold hidden md:flex gap-3 py-4">
-                            <li>Product</li>
-                            <li>Services</li>
-                            <li>Contact us</li>
+                        <ul class="font-semibold hidden md:flex gap-3 p-2 py-4">
+                            <li class="hover:bg-cyan-100">Product</li>
+                            <li class="hover:bg-cyan-100">Services</li>
+                            <li class="hover:bg-cyan-100">Contact us</li>
                         </ul>
                     </div>
-                    <div class="hidden md:flex gap-3">
-                        <i class="md:py-6 fa-solid fa-magnifying-glass"></i>
-                        <i class="md:py-6 fa-solid fa-cart-shopping"></i>
-                        <button class="md: border-2 border-solid border-green-800 rounded-lg text-xl px-8 h-14">Login</button>
-                        <button class="md: bg-green-500 text-white px-8 h-14 rounded-lg text-xl">Register</button>
+                    <div class="hidden md:flex gap-2">
+                        <i class="md:py-6 fa-solid fa-magnifying-glass hover:bg-red-100"></i>
+                        <i class="md:py-6 fa-solid fa-cart-shopping hover:bg-red-100"></i>
+                        <button class="md: border-2 border-solid border-green-800 rounded-lg text-xl hover:bg-red-100 px-8 h-14">Login</button>
+                        <button class="md: bg-green-500 text-white px-8 h-14 rounded-lg text-xl hover:bg-transparent">Register</button>
                   </div>
                 </nav>
             </div>
@@ -45,27 +46,27 @@
 
     <main>
 <section class="md:mx-32">
-    <h1 class="font-bold text-green-600 md:text-4xl mt-20">Services</h1>
+    <h1 class="font-bold text-green-600 text-2xl md:text-4xl mt-20">Services</h1>
     <br>
     <div class="md:justify-items-center">
     <div class="flex-row md:flex">
     <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-full md: w-1/3 h-96 mr-6 my-10 p-6">
         <div class="md:md:text-center justify-items-center">
-        <img class="bg-white rounded-full md:w-36 h-32 p-5 mr-5" src="asset/service.png" alt="">
+        <img class="bg-white rounded-full md:w-36 h-32 p-5" src="asset/service.png" alt="">
         <h3 class="font-bold md:text-2xl my-4">24/7 Services</h3>
         <p class="md:text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
     </div>
 </div>
     <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-full md: w-1/3 h-96 mr-6 my-10 p-6">
         <div class="md:text-center justify-items-center">
-        <img class="bg-white rounded-full md:w-36 h-32 p-5 mr-5" src="asset/delivery.png" alt="">
+        <img class="bg-white rounded-full md:w-36 h-32 p-5" src="asset/delivery.png" alt="">
         <h3 class="font-bold md:text-2xl my-4">Fast Delivery</h3>
         <p class="md:text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
     </div>
     </div>
     <div class="card bg-gradient-to-r from-white to-stone-300 rounded-xl shadow-xl w-full md: w-1/3 h-96 mr-6 my-10 p-6">
     <div class="md:text-center justify-items-center">
-        <img class="bg-white rounded-full md:w-36 h-32 p-5 mr-5" src="asset/healthy.png" alt="">
+        <img class="bg-white rounded-full md:w-36 h-32 p-5" src="asset/healthy.png" alt="">
         <h3 class="font-bold md:text-2xl my-4">Healthy Products</h3>
         <p class="md:text-xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
     </div>
@@ -76,31 +77,31 @@
 
 <section class="bg-gradient-to-r from-white to-stone-200 md: py-28">
     <div class="md:mx-32">
-    <h1 class="font-bold text-green-600 md:text-4xl mb-8">Popular Products</h1>
+    <h1 class="font-bold text-green-600 text-2xl md:text-4xl mb-8">Popular Products</h1>
     <div class="md:flex">
-    <div class="card bg-gradient-to-r from-green-600 to-white shadow-xl md: w-2/6 mr-14 pl-10 pt-10">
+    <div class="card bg-gradient-to-r from-green-600 to-white shadow-xl w-full sm: mb-5 md:w-2/6  mr-20 pl-10 pt-10">
         <h1 class="font-bold md: mb-8">30% off</h1>
         <p class="font-semibold">Discover a world of treats, toys, and <br> essentials handpicked for <br> </p>
-        <button class="font-semibold bg-white rounded-lg border-none md:text-xl text-left mt-8 p-2 text-center w-36">Buy Now</button>
+        <button class="font-semibold bg-white rounded-lg border-none hover:bg-red-100 md:text-xl text-left mt-8 p-2 text-center w-36">Buy Now</button>
         <img class="md:h-3/5" src="asset/vegetable-offer.png" alt="">
     </div>
-    <div class="grid grid-cols-2 gap-5 w-full md:grid-cols-3 gap-7 w-4/6">
-    <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row"">
+    <div class="grid grid-cols-2 gap-7 w-full md:grid-cols-3 gap-7 w-4/6">
+    <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row"">
         <div>
-        <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/image 43.png" alt="">
+        <img class="bg-gray-200 rounded-lg md: p-5" src="asset/image 43.png" alt="">
     </div>
-        <div class="w-auto p-3">
+        <div class="p-2">
         <i class="fa-solid fa-star text-orange-300"></i>
         <h4>4.5</h4>
         <h2 class="font-semibold">Onion 1KG</h2>
         <h5 class="font-semibold">$39.99</h5>
     </div>
     </div>
-    <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
+    <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
         <div>
-        <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16.png" alt="">
+        <img class="bg-gray-200 rounded-lg md: p-5" src="asset/Group 16.png" alt="">
     </div>
-        <div class="w-auto p-3">
+        <div class="p-2">
         <i class="fa-solid fa-star text-orange-300"></i>
         <h4>4.5</h4>
         <h2 class="font-semibold">Tomato 500g</h2>
@@ -109,31 +110,31 @@
     </div>
     <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
         <div>
-        <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16 (1).png" alt="">
+        <img class="bg-gray-200 rounded-lg md: p-5" src="asset/Group 16 (1).png" alt="">
     </div>
-        <div class="w-auto p-3">
+        <div class="p-2">
         <i class="fa-solid fa-star text-orange-300"></i>
         <h4>4.5</h4>
         <h2 class="font-semibold">Potato 1KG</h2>
         <h5 class="font-semibold">$39.99</h5>
     </div>
     </div>
-        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5" src="asset/Group 16.png" alt="">
         </div>
-            <div class="w-auto p-3">
+            <div class="p-2">
             <i class="fa-solid fa-star text-orange-300"></i>
             <h4>4.5</h4>
             <h2 class="font-semibold">Tomato 500g</h2>
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/image 43.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5" src="asset/image 43.png" alt="">
         </div>
-            <div class="w-auto p-3">
+            <div class="p-2">
             <i class="fa-solid fa-star text-orange-300"></i>
             <h4>4.5</h4>
             <h2 class="font-semibold">Onion 1KG</h2>
@@ -142,42 +143,42 @@
         </div>
         <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5" src="asset/Group 16.png" alt="">
         </div>
-            <div class="w-auto p-3">
+            <div class="p-2">
             <i class="fa-solid fa-star text-orange-300"></i>
             <h4>4.5</h4>
             <h2 class="font-semibold">Tomato 500g</h2>
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/image 43.png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5" src="asset/image 43.png" alt="">
         </div>
-            <div class="w-auto p-3">
+            <div class="p-2">
             <i class="fa-solid fa-star text-orange-300"></i>
             <h4>4.5</h4>
             <h2 class="font-semibold">Onion 1KG</h2>
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 mr-5 flex-row">
+        <div class="card  bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 rounded-lg md:p-5 mr-5" src="asset/Group 16 (1).png" alt="">
+            <img class="bg-gray-200 rounded-lg md:p-5" src="asset/Group 16 (1).png" alt="">
         </div>
-            <div class="w-auto p-3">
+            <div class="p-2">
             <i class="fa-solid fa-star text-orange-300"></i>
             <h4>4.5</h4>
             <h2 class="font-semibold">Potato 1KG</h2>
             <h5 class="font-semibold">$39.99</h5>
         </div>
         </div>
-        <div class="card bg-white shadow-xl rounded-lg md:w-80 h-40 p-5 flex-row">
+        <div class="card bg-white shadow-xl rounded-lg max-md:hidden md:w-80 h-40 p-5 flex-row">
             <div>
-            <img class="bg-gray-200 rounded-lg md: p-5 mr-5" src="asset/Group 16 (1).png" alt="">
+            <img class="bg-gray-200 rounded-lg md: p-5" src="asset/Group 16 (1).png" alt="">
         </div>
-            <div class="w-auto p-3">
+            <div class="p-2">
             <i class="fa-solid fa-star text-orange-300"></i>
             <h4>4.5</h4>
             <h2 class="font-semibold">Potato 1KG</h2>
@@ -191,31 +192,31 @@
 
 <section>
     <div class="md:mx-32">
-    <h1 class="font-bold text-green-600 md:text-4xl my-8">Arrival & Offers</h1>
+    <h1 class="font-bold text-green-600 text-2xl md:text-4xl my-8">Arrival & Offers</h1>
     <br>
     <div class="md:flex gap-8">
-    <div class="bg-green-800 rounded-xl md: flex justify-between p-16 w-3/5">
+    <div class="bg-green-800 rounded-xl sm: mb-5 md:w-3/5 flex justify-between p-16">
         <div>
             <div>
                 <img src="asset/dawat-logo.png" alt="">
             </div>
             <div>
-            <h3 class="bg-green-400 font-bold text-white rounded-lg md:text-xl text-center my-16 p-3">Cook Exotic Dishes</h3>
-            <h2 class="font-bold text-white md:text-5xl">UP to 20% OFF</h2>
+            <h3 class="bg-green-400 font-bold text-white rounded-lg md:text-xl text-center my-16"p-2">Cook Exotic Dishes</h3>
+            <h2 class="font-bold text-white animate-ping md:text-5xl">UP to 20% OFF</h2>
         </div>
     </div>
     <div>
         <img src="asset/dawat-mock-up.png" alt="">
     </div>
     </div>
-        <div class="bg-blue-800 rounded-xl md: flex justify-between p-12 w-2/5">
+        <div class="bg-blue-800 rounded-xl sm: mb-5 md:w-2/5 flex justify-between p-12">
             <div>
                 <div>
                     <img src="asset/india-gate-logo.png" alt="">
                 </div>
                 <div>
-                    <h3 class="bg-blue-400 font-bold text-white rounded-lg md:text-xl text-center my-12 p-3">World’s No.1 Rice</h3>
-                    <h2 class="font-bold text-white md: text-4xl ">UP to 40% OFF</h2>
+                    <h3 class="bg-blue-400 font-bold text-white rounded-lg md:text-xl text-center my-12"p-2">World’s No.1 Rice</h3>
+                    <h2 class="font-bold text-white animate-pulse md: text-4xl ">UP to 40% OFF</h2>
                 </div>
             </div>
             <div>
@@ -226,12 +227,12 @@
 </div>
 <div class="bg-gradient-to-r from-orange-300 to-red-500 md:mt-16">
     <div class="md:mx-32">
-    <h1 class="font-bold text-green-800 md:text-4xl my-8 py-8">Currently Delivering in</h1>
+    <h1 class="font-bold text-green-800 text-2xl md:my-8 py-8 text-4xl">Currently Delivering in</h1>
     <div class="md:flex gap-10 justify-center p-10">
-    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Dhaka</h3>
-    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Chattogram</h3>
-    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Rangpur</h3>
-    <h3 class="font-semibold bg-green-400 text-white rounded-lg md:text-3xl px-3">Barisal</h3>
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg text-center mb-3 md:text-3xl px-3">Dhaka</h3>
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg text-center mb-3 md:text-3xl px-3">Chattogram</h3>
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg text-center mb-3 md:text-3xl px-3">Rangpur</h3>
+    <h3 class="font-semibold bg-green-400 text-white rounded-lg text-center md:text-3xl px-3">Barisal</h3>
 </div>
 <div class="md:justify-items-center">
     <img class="md:w-1/5 h-1/5" src="asset/Bangladesh_divisions_english.svg" alt="">
@@ -239,39 +240,40 @@
 </div>
 </div>
 
-<div class="relative rounded-lg md:top-48  place-items-center">
+<div class="relative rounded-lg top-52 place-items-center">
     <div class="card bg-gradient-to-r from-white to-stone-200 shadow-xl md:flex-row justify-between w-3/5 p-12">
     <div>
         <img src="asset/vegetable-busket.png" alt="">
     </div>
     <div>
-        <h2 class=" font-bold md:text-2xl m-5">Get Grocery News!</h2>
-        <h5 class="md:text-xl m-5">Exclusive training tips, ticks, product deals and more.</h5>
-        <input class="rounded-lg md:text-xl p-6 m-5" type="email" name="" id="" placeholder="Enter email..."> <br>
-        <button class="font-semibold rounded-lg text-white bg-green-400 md:text-xl m-5 p-3">Subscribe</button>
+        <h2 class=" font-bold md:text-2xl mt-10">Get Grocery News!</h2>
+        <h5 class="md:text-xl mt-4">Exclusive training tips, ticks, product deals and more.</h5>
+        <input class="rounded-lg p-4 hover:bg-red-100 md:text-xl mt-4" type="email" name="" id="" placeholder="Enter email...">
+        <br>
+        <button class="font-semibold rounded-lg text-white bg-green-400 hover:bg-cyan-200 md:text-xl mt-4 p-3">Subscribe</button>
     </div>
 </div>
 </div>
 </section>
     </main>
 
-    <footer class="bg-green-600  text-white md:py-48 text-xl">
+    <footer class="bg-green-600  text-white py-52 md:py-48 text-xl">
         <div class="flex-row md:flex justify-between mx-32">
-            <div class="md:my-16">
+            <div class="my my-6 md:my-16">
                 <img src="asset/logo-footer.png" alt="">
                 <p>Discover a world of treats, toys, and <br>
                     essentials handpicked for your furry friends</p>
             </div>
-            <div class="md:my-16">
+            <div class="my-6 md:my-16">
                <ul>
-                <li class="md:mb-5"><a href="#">Product</a></li>
-                <li class="md:mb-5"><a href="#">Services</a></li>
-                <li class="md:mb-5"><a href="#">Contact us</a></li>
+                <li class="hover:bg-red-100 md:mb-5"><a href="#">Product</a></li>
+                <li class="hover:bg-red-100 md:mb-5"><a href="#">Services</a></li>
+                <li class="hover:bg-red-100 md:mb-5"><a href="#">Contact us</a></li>
                </ul>
             </div>
             <div class="md:my-16">
                 <h6 class="md:mb-5">Follow Us</h6>
-                <div class="flex md:gap-3">
+                <div class="flex py-2 gap-1">
                     <img src="asset/Mask group.png" alt="">
                     <img src="asset/Vector.png" alt="">
                     <img src="asset/Vector (1).png" alt="">
